<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@id/player_image_view"
        app:layout_constraintEnd_toEndOf="@id/player_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <kz.arctan.rock_paper_scissors.HealthBarView
            android:id="@+id/player_health_bar_view"
            android:layout_width="150dp"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/player_health_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/initial_health"
            android:textColor="#000"
            android:textSize="20sp" />

    </FrameLayout>

    <ImageView
        android:id="@+id/player_image_view"
        android:layout_width="200dp"
        android:layout_height="240dp"
        android:contentDescription="@string/knight"
        android:scaleX="-1"
        android:src="@drawable/knight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/player_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/make_a_choice"
            android:textColor="#000" />

        <ImageButton
            android:id="@+id/rock_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/choice"
            android:contentDescription="@string/rock"
            android:scaleType="fitCenter"
            android:src="@drawable/rock" />

        <ImageButton
            android:id="@+id/paper_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/choice"
            android:contentDescription="@string/paper"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/paper" />

        <ImageButton
            android:id="@+id/scissors_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/choice"
            android:contentDescription="@string/scissors"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/scissors" />

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/enemy_s_choice"
            android:textColor="#000" />

        <ImageView
            android:id="@+id/enemy_choice_image_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/enemy_choice"
            android:contentDescription="@string/unknown"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/unknown" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="150dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@id/dragon_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/dragon_image_view"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <kz.arctan.rock_paper_scissors.HealthBarView
            android:id="@+id/enemy_health_bar_view"
            android:layout_width="150dp"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/enemy_health_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/initial_health"
            android:textColor="#000"
            android:textSize="20sp" />

    </FrameLayout>

    <ImageView
        android:id="@+id/dragon_image_view"
        android:layout_width="500dp"
        android:layout_height="240dp"
        android:contentDescription="@string/dragon"
        android:src="@drawable/dragon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>